--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,10 +1,18 @@
+<app-player *ngFor="let player of game.players; let i = index;" class="player-position"
+    [ngStyle]="{'top.px': 140 + (i * 120)}" [name]="player"></app-player>
+
 <div class="field">
     <div class="card-stack">
         <img [ngStyle]="{'right.px': i * 5}" *ngFor="let c of [1,2,3,4]; let i = index;" src="/assets/img/blue_back.png"
             alt="">
 
         <img (click)="takeCard()" class="top-card" style="right: 25px" src="/assets/img/blue_back.png" alt="">
+        <img *ngFor="let card of game.playedCards" class="playedCards" src="/assets/img/{{ card }}.png" alt="">
         <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px"
-            src="/assets/img/spade_1.png" alt="">
+            src="/assets/img/{{ currentCard }}.png" alt="">
     </div>
 </div>
+
+<button mat-fab color="primary" (click)="openDialog()" class="btn-add">
+    <mat-icon>add</mat-icon>
+</button>
