--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,5 +1,5 @@
 <app-player *ngFor="let player of game.players; let i = index;" class="player-position"
-    [ngStyle]="{'top.px': 140 + (i * 120)}" [name]="player"></app-player>
+    [ngStyle]="{'top.px': 140 + (i * 90)}" [playerActive]="i == game.currentPlayer" [name]="player"></app-player>
 
 <div class="field">
     <div class="card-stack">
@@ -12,6 +12,8 @@
             src="/assets/img/{{ currentCard }}.png" alt="">
     </div>
 </div>
+
+<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
 
 <button mat-fab color="primary" (click)="openDialog()" class="btn-add">
     <mat-icon>add</mat-icon>
