--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -7,14 +7,18 @@
         font-size: 24px;
         margin-left: 16px;
     }
-    background-color: rgb(0, 204, 255);
+    background-color: rgb(136, 141, 143);
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
     img{
-        width: 100px;
-        height: 100px;
+        width: 70px;
+        height: 70px;
         object-fit: cover;
         margin-left: 20px;
-        // border-radius: 50%;
     }
+}
+
+.player-active{
+    background-color: rgb(0, 204, 255) !important;
+    transform: scale(1.2);
 }
