--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -2,7 +2,7 @@
     width: 100vw;
     height: 100vh;
     max-width: 100%;
-    background-image: url('/assets/background.jpg') ;
+    background-image: url('/ringoffire-firebase/assets/background.jpg') ;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
