--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,4 +1,4 @@
 <div class="player" [class.player-active]="playerActive">
-    <img src="/assets/player-blue.png" alt="">
+    <img src="/ringoffire-firebase/assets/player-blue.png" alt="">
     <span>{{ name }}</span>
 </div>
